Try to fix mobile alignment

--- a/static/css/styles-available_creations.css
+++ b/static/css/styles-available_creations.css
@@ -52,7 +52,7 @@ button {
 
 .column3 {
     flex: 30%;
-    padding: 50px;
+    padding: 10px;
     padding: 0 4px;
 }
 
